@startuml db

' 生徒
entity "student" {
  * id : string <<PK>>
  --
  + name : string <<NOT NULL>>
  + mail_address : string <<UNIQUE, NOT NULL>>
  + student_status_id : integer <<FK>>
}

' 生徒の状態
entity "student_status" {
  * id : integer <<PK>>
  --
  + name : string <<UNIQUE, NOT NULL>>
}

' チーム
entity "team" {
  * id : string <<PK>>
  --
  + name : string <<NOT NULL>>
}

' チームの生徒
' あえて中間テーブルで設定
' https://zenn.dev/praha/articles/65afb28caacd0b
entity "team_member" {
  * student_id : string <<FK>>
  * team_id : string <<FK>>
}

' 課題の状況
entity "task" {
  * student_id : string <<FK>>
  * task_content_id : string <<FK>>
  * task_status_id : integer <<FK>>
}

' 課題
entity "task_content" {
  * id : string <<PK>>
  --
  + title : string <<NOT NULL>>
  + content : text
}


' 課題のステータス
entity "task_status" {
  * id : integer <<PK>>
  --
  + name : string <<UNIQUE, NOT NULL>>
}

' 1つの生徒は1つの生徒の状態を持つ
student ||--|| student_status

' 1つの生徒は0以上の複数のチームを持つ
' あえて中間テーブルで設定
' https://zenn.dev/praha/articles/65afb28caacd0b
student ||--o| team_member

' 1つのチームは1以上の複数の生徒を持つ
team ||--|{ team_member

' 1つの生徒は0以上の複数の課題を持つ
student ||--o{ task

' 1つのタスクは1つのコンテンツを持つ
task ||--|| task_content

' 1つの課題は1つの課題のステータスを持つ
task ||--|| task_status

@enduml